include_directories(${SRC_DIR}/common
        ${SRC_DIR}/common
        ${SRC_DIR}/net
        ${SRC_DIR}/cache
        ${SRC_DIR}/cache/read
        ${SRC_DIR}/cache/write
        ${SRC_DIR}/cluster
        ${SRC_DIR}/config
        ${SRC_DIR}/disk
        ${SRC_DIR}/htracer
        ${SRC_DIR}/net
        ${SRC_DIR}/net/rpc
        ${SRC_DIR}/sdk
        ${SRC_DIR}/server
        ${SRC_DIR}/stream
        ${SRC_DIR}/underfs
        ${PROJECT_3RDPARTY_BIN_DIR}/hcom/include/hcom
        ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/include/spdlog
        ${PROJECT_3RDPARTY_BIN_DIR}/zookeeper/include/zookeeper
        ${TEST_DIR}/mock
        ${TEST_DIR}/htracer
        ${TEST_DIR}/server
        ${TEST_DIR}/cm
        ${TEST_DIR}/disk
        ${TEST_DIR}/sdk
        ${TEST_DIR}/cache/read
        ${TEST_DIR}/cache/write
        ${TEST_DIR}/net/rpc)

link_directories(
        ${PROJECT_3RDPARTY_BIN_DIR}/hcom/lib/
        ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/lib64/
        ${PROJECT_3RDPARTY_BIN_DIR}/zookeeper/lib/
)

add_subdirectory(unit-tests)