set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${TARGET_INSTALL_LIB_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${TARGET_INSTALL_LIB_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${TARGET_INSTALL_BIN_DIR})
message(STATUS "xxxxxxx" ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
message(STATUS "xxxxxxx" ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
link_directories(${TARGET_INSTALL_LIB_DIR})

add_subdirectory(cli)
add_subdirectory(tracepoint)