exec_program(dos2unix ${OUTPUT_DIR} ARGS *.conf RETURN_VALUE SUCCESS)
if (SUCCESS EQUAL 1)
    message(FATAL_ERROR "-- failed to dos2unix conf file")
else()
    message("-- dos2unix conf files done")
endif (SUCCESS EQUAL 1)

set(TARGET_INSTALL_CONF ${TARGET_INSTALL_DIR}/conf)
if (CMAKE_BUILD_TYPE STREQUAL "debug")
    file(GLOB CONF_FILES *.conf)
else()
    file(GLOB CONF_FILES bio.conf)
endif()
install(FILES ${CONF_FILES} DESTINATION ${TARGET_INSTALL_CONF}/ PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ)